@@ -1,6 +1,6 @@
 {
-  "count": 16,
-  "uniques": 3,
+  "count": 18,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-05-29T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2022-06-05T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-06T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
