@@ -1,3 +1,10 @@
+2022-06-06T08:14:12Z:
+* notice: last 14d: unq all: 4 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 175 328 / 185 344
+* notice: next accum: outdated-unq outdated-all / unq all: 175 328 / 187 346
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-06-06]
+
 2022-06-05T16:14:31Z:
 * notice: last 14d: unq all: 3 16
 * notice: prev accum: outdated-unq outdated-all / unq all: 175 328 / 184 343
